# namaste-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  audit.py  docker-compose.yml  nginx.conf  puzzle_design_guidelines.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PITCH_ALIGNMENT.md  TLS_SETUP.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/features/forge/: progress.test.ts  progress.ts  useRunProgress.ts
frontend/src/features/games/: GameChrome.tsx  GameRenderer.test.tsx  GameRenderer.tsx  MechanicRenderers.tsx  fixture.ts
frontend/src/features/games/solver/: mechanics.test.ts  mechanics.ts  projectile.test.ts  projectile.ts
frontend/src/types/: game.ts
frontend/tests/visual/: forge.pw.ts
migrations/: env.py  script.py.mako
migrations/versions/: 20260719_0001_initial.py  20260719_0002_game_html.py
nginx/conf.d/: default.conf  ssl.conf
src/math_puzzle_agent/: __init__.py  browser.py  cli.py  config.py  game_prompts.py  prompts.py  router.py  schemas.py  structured_workflow.py  workflow.py
src/math_puzzle_agent/api/: __init__.py  app.py  errors.py  middleware.py  security.py  settings.py
src/math_puzzle_agent/api/routes/: conversations.py  games.py  runs.py  system.py
src/math_puzzle_agent/db/: __init__.py  checkpoints.py  models.py  repositories.py  session.py
src/math_puzzle_agent/games/: __init__.py  fixtures.py  html_renderer.py  registry.py  schemas.py
src/math_puzzle_agent/games/solvers/: __init__.py  mechanics.py  projectile.py
src/math_puzzle_agent/services/: __init__.py  conversations.py  generation_runs.py  structured_generation.py
tests/: test_router.py  test_workflow.py
tests/api/: test_conversations.py  test_games.py  test_hardening.py  test_runs.py  test_system.py
tests/db/: test_checkpoints.py  test_models.py
tests/games/: test_mechanics.py  test_projectile_solver.py  test_schemas.py
tests/workflow/: test_structured_workflow.py
